syntax = "proto3";

option java_multiple_files = true;
option java_package = "marmot.proto.process";

package marmot.optor.proto;

import public "marmot.proto";

message E2SFCAParametersProto {
	string consumer_dataset = 1;
	string consumer_features = 2;
	string provider_dataset = 3;
	string provider_features = 4;
	string output_dataset = 5;
	string output_features = 6;
	double service_distance = 7;
	string weight_function = 8;
}
message E2SFCAStep1Proto {
	string param_geomemtry_column = 1;
	string input_dataset = 2;
	string input_feature_columns = 3;
	string param_feature_columns = 4;
	double radius = 5;
	string distance_decay_function = 6;
}
message E2SFCAStep2Proto {
	string input_geomemtry_column = 1;
	string intermediate_dataset = 2;
	string input_feature_columns = 3;
	string output_feature_columns = 4;
	string tagged_columns = 5;
	double radius = 6;
	string distance_decay_function = 7;
}